--- a/aloha.css
+++ b/aloha.css
@@ -1,9 +1,9 @@
 /**
  * Aloha-related style
  */
-.aloha-edit,
-.aloha-edit * {
-  background: #FFFFCC;
+.aloha-edit {
+  display: inline-block;
+  background: rgba(255, 255, 200, 0.4);
 }
 
 .aloha-status {
